# llm-rag-ft-bench

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DECISIONS.md  EXPERIMENT.md  README.md  ROADMAP-repo2-llm-rag-ft-bench.md  commit-structure-prompt.md  docker-compose.yaml  pre-phase4-fixes-prompt.md  pyproject.toml
.github/workflows/: ci.yaml
configs/: base.yaml  corpus.yaml  eval.yaml  finqa_corpus.yaml  rag.yaml
data/: audit_sample.json  corpus_manifest.json  eval_manifest.jsonl
reports/: base_results.jsonl  base_vs_rag.md  retrieval_diagnostics.md
scripts/: build_corpus.py  build_eval_set.py  build_finqa_corpus.py  build_index.py  retrieval_diagnostics.py  run_eval.py  run_stats.py
src/ragbench/: __init__.py
src/ragbench/corpus/: __init__.py  chunker.py  cleaner.py  downloader.py  finqa_tatqa.py
src/ragbench/eval/: __init__.py  metrics.py  normalize.py  reporting.py  runner.py  stats.py
src/ragbench/generation/: __init__.py  base.py  config.py  rag.py
src/ragbench/retrieval/: __init__.py  embedder.py  indexer.py  retriever.py
tests/fixtures/: sample_chunks.jsonl  sample_eval.jsonl
tests/integration/: test_finqa_retrieval.py  test_retrieval.py
tests/unit/: test_chunker.py  test_finqa_tatqa.py  test_metrics.py  test_normalize.py  test_runner.py  test_stats.py
